--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "MitsubachiConsole"
+    %title= content_for?(:title) ? yield(:title) : "MushikagoManagementConsole"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -20,7 +20,7 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
-          %a.brand(href="#") MitsubachiConsole
+          %a.brand(href="#") MushikagoManagementConsole
 
     .container
       .content
